@@ -29,6 +29,7 @@
 - [X] Avoid absolute positionning to be able to use WP admin bar (top:28px;)
 - [X] Find a way to add a AddThis.com div
 **** TODO Wordpress theme development
+     CLOCK: [2012-02-17 ven. 11:25]--[2012-02-17 ven. 11:50] =>  0:25
      CLOCK: [2012-02-16 jeu. 13:44]--[2012-02-16 jeu. 14:14] =>  0:30
      CLOCK: [2012-02-04 sam. 07:38]--[2012-02-04 sam. 08:10] =>  0:32
      CLOCK: [2012-02-03 ven. 09:43]--[2012-02-03 ven. 10:04] =>  0:21
@@ -134,8 +135,8 @@ the patternClearHeaderLeft div.
 - [X] Must test archive for missing files
 - [X] The header style causes dead links
       It was due to the #rb-skin01-footer{position: relative; }
-- [ ] There is no 'login' link
-- [ ] Switch to Wordpress 3.3.1
+- [X] There is no 'login' link
+- [ ] Switch to Wordpress 3.3.1 and upgrade plugins
 - [ ] The black menu isn't correct in ie6
       - [ ] testing WP's twentyeleven skin with ie6
       - [ ] See what are the differences if it works
