@@ -65,11 +65,13 @@ div#google-ad
 }
 
 #rb-skin01-footer
-{ 
+{
   top: 40px;
-  color: #222;
-  padding: 10px; 
+  color: #444;
+  padding-left: 10px; 
+  padding-bottom: 0px;
   font-size: 12px;
+  line-height:115%;
 }
 
 #rb-skin01-footer-right
